<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2020 Forrest Guice
    This file is part of SuntimesWidget.

    SuntimesWidget is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    SuntimesWidget is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with SuntimesWidget.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical"
    android:background="?attr/dialogBackground">

    <View style="?attr/sheetEdgeStrong" />

    <LinearLayout android:id="@+id/dialog_header"
        android:background="?attr/dialogFrame"
        android:layout_width="match_parent" android:layout_height="56dp"
        android:orientation="horizontal" android:gravity="center_vertical|start">

        <Spinner android:id="@+id/type_spin"
            android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
            tools:listitem="@layout/layout_listitem_alarmtype" />

        <com.forrestguice.support.widget.ImageButton android:id="@+id/dialog_button_accept"
            style="?attr/actionOverflowButtonStyle" android:contentDescription="@string/schedalarm_dialog_ok"
            android:layout_width="96dp" android:layout_height="56dp" android:paddingLeft="16dp" android:paddingRight="16dp"
            android:paddingTop="12dp" android:paddingBottom="12dp"
            android:src="?attr/icActionAccept"  android:scaleType="fitCenter"
            android:tint="?attr/text_accentColor" />

    </LinearLayout>

    <com.forrestguice.support.widget.TabLayout
        android:id="@+id/tabLayout"
        android:background="?attr/dialogFrame"
        android:layout_width="match_parent" android:layout_height="32dp"
        android:layout_marginBottom="8dp">

        <com.forrestguice.support.widget.TabItem
            android:id="@+id/tab_event"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/schedalarm_dialog_tab_event" />

        <com.forrestguice.support.widget.TabItem
            android:id="@+id/tab_time"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/schedalarm_dialog_tab_time" />

    </com.forrestguice.support.widget.TabLayout>

    <FrameLayout
        android:id="@+id/fragmentContainer1"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:nextFocusRight="@+id/layout_datetime"
        />

    <FrameLayout android:background="?attr/dialogFrame"
        android:layout_width="match_parent" android:layout_height="wrap_content" >

        <include layout="@layout/layout_listitem_alarmtime"
            android:layout_marginTop="8dp" android:layout_height="wrap_content" android:layout_width="match_parent" />

        <com.forrestguice.support.widget.ImageButton android:id="@+id/dialog_button_alarms"
            style="?attr/actionOverflowButtonStyle"
            android:contentDescription="@string/app_name_alarmclock"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="0dp" android:paddingTop="8dp" android:paddingBottom="8dp"
            android:src="@drawable/ic_suntimesalarms" />

    </FrameLayout>

    <!--<LinearLayout
        android:background="?attr/dialogFrame"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal" android:gravity="center_vertical|end"
        android:paddingLeft="?dialogPreferredPadding" android:paddingRight="?dialogPreferredPadding"
        android:paddingTop="8dp" android:paddingBottom="8dp">

        <Button
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:id="@+id/dialog_button_cancel"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/schedalarm_dialog_cancel"
            tools:ignore="ButtonOrder" />

        <Button
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:id="@+id/dialog_button_accept"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/schedalarm_dialog_ok" />

    </LinearLayout>-->

</LinearLayout>