<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2018-2020 Forrest Guice
    This file is part of SuntimesWidget.

    SuntimesWidget is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    SuntimesWidget is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with SuntimesWidget.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/modepicker"
        android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="48dp"
        android:layout_marginLeft="0dp" android:layout_marginRight="8dp"
        android:layout_marginStart="0dp" android:layout_marginEnd="8dp"
        android:layout_gravity="end"
        tools:text="System Time Zone" tools:listitem="@layout/layout_listitem_alarmtz"
        android:nextFocusDown="@+id/locationPicker" android:nextFocusRight="@+id/locationPicker" />

    <TextView
        android:id="@+id/locationPicker" android:background="?attr/selectableItemBackground"
        android:layout_width="wrap_content" android:minWidth="250dp"
        android:layout_height="wrap_content" android:minHeight="48dp"
        android:gravity="center_vertical" android:drawablePadding="8dp"
        android:layout_marginLeft="0dp" android:layout_marginRight="0dp" android:layout_marginBottom="0dp"
        android:paddingLeft="16dp" android:paddingRight="16dp" android:paddingBottom="4dp"
        android:paddingStart="16dp" android:paddingEnd="16dp"
        android:drawableLeft="?attr/icActionPlace" android:drawableStart="?attr/icActionPlace"
        android:textSize="?attr/text_size_small" tools:text="Location"
        android:nextFocusUp="@+id/modepicker" android:nextFocusLeft="@+id/modepicker"
        android:nextFocusDown="@+id/datePicker" android:nextFocusRight="@+id/datePicker" />

    <TextView
        android:id="@+id/datePicker" android:background="?attr/selectableItemBackground"
        android:layout_width="wrap_content" android:minWidth="250dp"
        android:layout_height="wrap_content" android:minHeight="48dp"
        android:gravity="center_vertical" android:drawablePadding="8dp"
        android:layout_marginLeft="0dp" android:layout_marginRight="0dp"
        android:paddingLeft="16dp" android:paddingRight="16dp" android:paddingTop="4dp" android:paddingBottom="4dp"
        android:paddingStart="16dp" android:paddingEnd="16dp"
        android:drawableLeft="?attr/icActionCalendar" android:drawableStart="?attr/icActionCalendar"
        android:textSize="?attr/text_size_small" tools:text=""
        android:nextFocusUp="@+id/locationPicker" android:nextFocusLeft="@+id/locationPicker"
        android:nextFocusDown="@+id/timepicker" android:nextFocusRight="@+id/timepicker" />

    <TimePicker android:theme="@style/TimePickerStyle"
        android:id="@+id/timepicker"
        android:timePickerMode="spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top" />


</LinearLayout>